files/iptables/rules.v4
# Generated by iptables-save v1.6.0 on Sat Jun 30 18:06:43 2018
*filter

-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -d 127.0.0.0/8 -j REJECT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT ! -o lo -d 127.0.0.0/8 -j REJECT
#-A OUTPUT -i lo -p icmp --icmp-type any -j REJECT

-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
#-A OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

-A OUTPUT -p udp --dport 53 -j ACCEPT

# ntp.nict.jp
-A OUTPUT -o wlp2s0 -d 133.243.238.163 -p udp --dport 123 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 133.243.238.164 -p udp --dport 123 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 133.243.238.243 -p udp --dport 123 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 133.243.238.244 -p udp --dport 123 -j ACCEPT

# ftp1.debian.or.jp
-A OUTPUT -o wlp2s0 -d 202.221.179.45 -p tcp --dport 80 -j ACCEPT
# ftp.nara.wide.ad.jp
-A OUTPUT -o wlp2s0 -d 203.178.137.175 -p tcp --dport 80 -j ACCEPT
# ftp.tsukuba.wide.ad.jp
-A OUTPUT -o wlp2s0 -d 203.178.132.80 -p tcp --dport 80 -j ACCEPT
# dennou-h.gfd-dennou.org
-A OUTPUT -o wlp2s0 -d 133.87.45.30 -p tcp --dport 80 -j ACCEPT
# dennou-k.gfd-dennou.org
-A OUTPUT -o wlp2s0 -d 130.54.59.159 -p tcp --dport 80 -j ACCEPT
# dennou-q.gfd-dennou.org
-A OUTPUT -o wlp2s0 -d 133.5.166.3 -p tcp --dport 80 -j ACCEPT
# debian-mirror.sakura.ne.jp
-A OUTPUT -o wlp2s0 -d 153.127.75.11 -p tcp --dport 80 -j ACCEPT
# riksun.riken.go.jp
-A OUTPUT -o wlp2s0 -d 134.160.38.1 -p tcp --dport 80 -j ACCEPT
# infoserv.ics.es.osaka-u.ac.jp
-A OUTPUT -o wlp2s0 -d 133.1.240.15 -p tcp --dport 80 -j ACCEPT
# ftp.kddilabs.jp
-A OUTPUT -o wlp2s0 -d 192.26.91.193 -p tcp --dport 80 -j ACCEPT
# ring.shibaura-it.ac.jp
-A OUTPUT -o wlp2s0 -d 202.18.64.24 -p tcp --dport 80 -j ACCEPT
# ring.u-toyama.ac.jp
-A OUTPUT -o wlp2s0 -d 160.26.2.184 -p tcp --dport 80 -j ACCEPT
# ring.airnet.ne.jp
-A OUTPUT -o wlp2s0 -d 210.159.71.23 -p tcp --dport 80 -j ACCEPT
# ring.ix.oita-u.ac.jp
-A OUTPUT -o wlp2s0 -d 133.37.44.6 -p tcp --dport 80 -j ACCEPT
# security.debin.org
-A OUTPUT -o wlp2s0 -d 133.242.99.74 -p tcp --dport 80 -j ACCEPT
# ftp.jp.debian.org
-A OUTPUT -o wlp2s0 -d 150.65.7.130 -p tcp --dport 80 -j ACCEPT

# download.docker.com
-A OUTPUT -o wlp2s0 -d 13.32.52.90 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 13.32.52.25 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 13.32.52.64 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 13.32.52.78 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 13.35.67.89 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 13.35.67.104 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 13.35.67.79 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 13.35.67.42 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 143.204.83.95 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 143.204.83.49 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 143.204.83.32 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 143.204.83.37 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 52.85.12.83 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 52.85.12.107 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 52.85.12.177 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 52.85.12.245 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 99.84.59.78 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 99.84.59.129 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 99.84.59.89 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 99.84.59.29 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 13.33.213.65 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 13.33.213.48 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 13.33.213.226 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 13.33.213.17 -p tcp --dport 443 -j ACCEPT

# registry-1.docker.io
-A OUTPUT -o wlp2s0 -d 34.200.28.105 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 54.165.149.19 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 34.205.207.96 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 54.175.43.85 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 34.206.236.31 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 34.201.236.93 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 34.233.151.211 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 52.70.175.131 -p tcp --dport 443 -j ACCEPT

# production.cloudflare.docker.com
-A OUTPUT -o wlp2s0 -d 104.18.121.25 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 104.18.122.25 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 104.18.123.25 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 104.18.124.25 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 104.18.125.25 -p tcp --dport 443 -j ACCEPT

# github.com
-A OUTPUT -o wlp2s0 -d 192.30.255.113 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 192.30.255.112 -p tcp --dport 443 -j ACCEPT

# codeload.github.com
-A OUTPUT -o wlp2s0 -d 192.30.255.121 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 192.30.255.120 -p tcp --dport 443 -j ACCEPT

# security-cdn.debian.org(prod.debian.map.fastly.net)
-A OUTPUT -o wlp2s0 -d 151.101.196.204 -p tcp --dport 80 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 151.101.72.204 -p tcp --dport 80 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 151.101.228.204 -p tcp --dport 80 -j ACCEPT

# ppa.launchpad.net
-A OUTPUT -o wlp2s0 -d 91.189.95.83 -p tcp --dport 80 -j ACCEPT

# keyserver.ubuntu.com
-A OUTPUT -o wlp2s0 -d 91.189.90.55 -p tcp --dport 80 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 91.189.89.49 -p tcp --dport 80 -j ACCEPT

# extentions.gnome.org
#-A OUTPUT -o wlp2s0 -d 209.132.180.168 -p tcp --dport 443 -j ACCEPT
#-A OUTPUT -o wlp2s0 -d 209.132.180.180 -p tcp --dport 443 -j ACCEPT

# pypi.org
-A OUTPUT -o wlp2s0 -d 151.101.192.223 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 151.101.128.223 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 151.101.64.223 -p tcp --dport 443 -j ACCEPT
-A OUTPUT -o wlp2s0 -d 151.101.0.223 -p tcp --dport 443 -j ACCEPT
#-A OUTPUT -o wlp2s0 -d 151.101.192.223 -p tcp --dport 80 -j ACCEPT
#-A OUTPUT -o wlp2s0 -d 151.101.128.223 -p tcp --dport 80 -j ACCEPT
#-A OUTPUT -o wlp2s0 -d 151.101.64.223 -p tcp --dport 80 -j ACCEPT
#-A OUTPUT -o wlp2s0 -d 151.101.0.223 -p tcp --dport 80 -j ACCEPT

# bootstrap.pypa.io
-A OUTPUT -o wlp2s0 -d 151.101.228.175 -p tcp --dport 443 -j ACCEPT
#-A OUTPUT -o wlp2s0 -d 151.101.228.175 -p tcp --dport 80 -j ACCEPT

# pypi.python.org
-A OUTPUT -o wlp2s0 -d 151.101.228.223 -p tcp --dport 443 -j ACCEPT

# files.pythonhosted.org
-A OUTPUT -o wlp2s0 -d 151.101.229.63 -p tcp --dport 443 -j ACCEPT

-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7
-A OUTPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7

#-A OUTPUT -j ACCEPT
-A OUTPUT -j REJECT
-A INPUT -j REJECT
-A FORWARD -j REJECT

COMMIT
# Completed on Sat Jun 30 18:06:43 2018
